---------
* The DockBar's parent for dock containers was set incorrectly. The wrong 
   DockBar could be destroyed when a dock container was destroyed.   
* Corrected variable initialisation in CMenuMetrics
* Adjusted text position in Windows 7 menus.
* Several bug fixes to CString
* Fixed CMenu::GetMenuString
	 
New Features and Enhancements
-----------------------------
* Added CImageList
* Updated CSocket:
   - now supports WinCE
   - send and receive functions now use char and support binary data.
   - port arguments are now UINT, not LPCTSTR
* Updated CFrame
   - Frames now use the IDW_READY resource for the "Ready" string.
   - CFrame no longer requires the number of images in the ToolBar bitmap to
      equal the number of ToolBar buttons. The width of the button bitmap is
      now assumed to be equal to its height or a minimum of 16.
   - The code for ToolBar and MenuBar themes has been moved to CFrame, making it
      easier to customize. Also, the notifications (from WM_NOTIFY) are handled in
	  a virtual functions, making them easier to customize.   
   - ToolBars for DockContainers automatically use the Frame's ToolBar theme.
* Updated CWnd
   - Added OnClose. It is called automatically when a window asks to be closed.
   - Added OnDestroy. It is called automatically when a window is destroyed.
   - CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
      the menu parameter to specify a menu for a parent window, or a window ID
      for a child window.
* Updated CFile:
   - CFile functions are now virtual.
   - OpenFileDialog and SaveFileDialog allow the dialog title to be specified.
* Updated CToolBar
   - SetButtonInfo can now be used to change a ToolBar button's image and 
      command ID.
   - Functions now use CImageList* instead of HIMAGELIST
* Updated CDialog
   - Added GetDefID, GotoDlgCtrl, MapDialogRect, NextDlgCtrl, PrevDlgCtrl
	  and SetDefID.
* TRACE now accepts both ANSI and Unicode strings.