@@ -18,7 +18,7 @@ protected:
 	virtual void PreCreate(CREATESTRUCT &cs);
 
 private:
-	HIMAGELIST m_himlImages;
+	CImageList m_imlImages;
 };
 
 
