@@ -12,20 +12,24 @@ Bug Fixes
 New Features and Enhancements
 -----------------------------
 * Added CImageList
+* Added ToolBarDemo Sample. 
+   - demonstrates ToolBar customization.
+   - demonstrates adding and removing ToolBar buttons.
+   - demonstrates saving and restoring ToolBar layout.
 * Updated CSocket:
    - now supports WinCE
    - send and receive functions now use char and support binary data.
    - port arguments are now UINT, not LPCTSTR
-* Updated CFrame
+* Updated CFrame:
    - Frames now use the IDW_READY resource for the "Ready" string.
    - CFrame no longer requires the number of images in the ToolBar bitmap to
       equal the number of ToolBar buttons. The width of the button bitmap is
       now assumed to be equal to its height or a minimum of 16.
    - The code for ToolBar and MenuBar themes has been moved to CFrame, making it
       easier to customize. Also, the notifications (from WM_NOTIFY) are handled in
-	  a virtual functions, making them easier to customize.   
+	  virtual functions, making them easier to override.   
    - ToolBars for DockContainers automatically use the Frame's ToolBar theme.
-* Updated CWnd
+* Updated CWnd:
    - Added OnClose. It is called automatically when a window asks to be closed.
    - Added OnDestroy. It is called automatically when a window is destroyed.
    - CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
@@ -38,6 +42,7 @@ New Features and Enhancements
    - SetButtonInfo can now be used to change a ToolBar button's image and 
       command ID.
    - Functions now use CImageList* instead of HIMAGELIST
+   - Added support for ToolBar customization.
 * Updated CDialog
    - Added GetDefID, GotoDlgCtrl, MapDialogRect, NextDlgCtrl, PrevDlgCtrl
 	  and SetDefID.
@@ -123,6 +128,7 @@ Changes in detail
 - Modified CComboBoxEx::SetImageList
 - Modified CFile::OpenFileDialog   		Added Title argument	
 - Modified CFile::SaveFileDialog		Added Title argument
+- Modified CFrame::AddToolBarButton
 - Modified CFrame::CMenuBar				returns pointer
 - Modified CFrame::CReBar				returns pointer
 - Modified CFrame::CStatusBar			returns pointer
@@ -147,6 +153,7 @@ Changes in detail
 - Modified CTreeView::GetImageList
 - Modified CTreeView::SetImageList
 - Modified CTreeView::CreateDragImage
+- Modified CToolBar::AddButton
 - Modified CToolBar::GetDisabledImageList
 - Modified CToolBar::GetHotImageList
 - Modified CToolBar::GetImageList
